@@ -53,6 +53,8 @@ where XXXXXX is the bug number as listed below.
 340430 Fix some grammatical weirdness in the manual.
 n-i-bz Old STABS code is still being compiled, but never used. Remove it.
 n-i-bz Fix compilation on distros with glibc < 2.5
+n-i-bz Provide implementations of certain compiler builtins to support
+       compilers who may not provide those
 
 
 Release 3.10.0 (10 September 2014)
